--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   margin: auto;
   width: 85%;
 }
@@ -26,4 +25,19 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.loadingBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: #018762;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.loadingBody img {
+  margin-bottom: 2rem;
 }
